--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
