--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "14": "^3.1.6",
+    "axios": "^0.27.2",
     "babel-preset-es2015": "^6.24.1",
-    "next": "10.2.3",
+    "contentful": "^9.1.29",
+    "next": "^12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
