--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "14": "^3.1.6",
+    "@contentful/rich-text-html-renderer": "^15.13.1",
     "axios": "^0.27.2",
     "babel-preset-es2015": "^6.24.1",
-    "contentful": "^9.1.29",
+    "contentful": "^9.1.31",
+    "html-react-parser": "^1.4.14",
     "next": "^12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
