--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "axios": "^0.27.2",
     "babel-preset-es2015": "^6.24.1",
     "contentful": "^9.1.31",
+    "eslint-config-next": "^13.3.0",
     "html-react-parser": "^1.4.14",
-    "next": "^12.1.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^13.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
