--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "^13.3.0",
     "html-react-parser": "^1.4.14",
     "next": "^13.3.0",
+    "next-sanity": "^4.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
