--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "14": "^3.1.6",
     "@contentful/rich-text-html-renderer": "^15.13.1",
     "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@sanity/image-url": "^1.0.2",
     "axios": "^0.27.2",
     "babel-preset-es2015": "^6.24.1",
     "contentful": "^9.1.31",
