--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "14": "^3.1.6",
+    "@portabletext/react": "^3.0.11",
+    "@portabletext/to-html": "^2.0.5",
     "@sanity/image-url": "^1.0.2",
     "babel-preset-es2015": "^6.24.1",
     "eslint-config-next": "^13.3.0",
